--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,2 +1,15 @@
-%h1 Users#new
-%p Find me in app/views/users/new.html.haml
+%h2 Sign Up
+= form_for @user, html: { role: 'form' } do |f|
+  .form-group
+    = f.label :name, 'Full name'
+    = f.text_field :name, class: 'form-control', placeholder: 'Enter full name'
+
+  .form-group
+    = f.label :email, 'Email address'
+    = f.email_field :email, class: 'form-control', placeholder: 'Enter email'
+
+  .form-group
+    = f.label :password, 'Password'
+    = f.password_field :password, class: 'form-control', placeholder: 'Password'
+
+  %button{ type: 'submit', class: 'btn btn-default' } Sign Up
