--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,23 +8,12 @@
   %div
     = flash.alert || flash.notice
 
+= render partial: 'expenses/form'
+
 - @user.expenses.each do |expense|
   %div
     = expense.store
     = expense.comment
     = number_to_currency(expense.price)
 
-= form_for Expense.new, html: { role: 'form' } do |f|
-  .form-group
-    = f.label :store, 'Store'
-    = f.text_field :store, class: 'form-control', placeholder: 'Enter store name'
-
-  .form-group
-    = f.label :comment, 'Purchased Items'
-    = f.text_field :comment, class: 'form-control', placeholder: 'Enter purchased items'
-
-  .form-group
-    = f.label :price, 'Price'
-    = f.text_field :price, class: 'form-control', placeholder: 'Enter price'
-
-  %button{ type: 'submit', class: 'btn btn-default' } Add expense
+    = link_to 'edit', '#', class: 'edit-expense', data: { id: expense.id, store: expense.store, price: expense.price, comment: expense.comment }
