--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:name => 'viewport', :content => 'width=device-width', 'initial-scale' => 1, 'maximum-scale' => 1, 'user-scalable' => 'no'}/
     %title
-      Expenses
+      Money
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
