--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,12 +1,13 @@
 !!!
 %html
   %head
-    %meta{:name => 'viewport', :content => 'width=device-width', 'initial-scale' => 1, 'maximum-scale' => 1, 'user-scalable' => 'no'}/
+    %meta{charset: 'utf-8'}
+    %meta{'http-equiv': 'X-UA-Compatible', content: 'IE=edge'}
+    %meta{name: 'viewport', content: 'width=device-width', 'initial-scale': 1, 'maximum-scale': 1, 'user-scalable': 'no'}/
     %title
       Money
-    = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", "data-turbolinks-track" => true
-    = csrf_meta_tags
+    = stylesheet_link_tag 'application', media: 'all'
+    = javascript_include_tag 'application'
 
   .container
     = yield
