--- a/app/views/welcome/signup.html.haml
+++ b/app/views/welcome/signup.html.haml
@@ -1,34 +1,41 @@
 
 %form.form-horizontal#signup-form
+  .validation-response
   .form-group
     %label.col-sm-2.control-label{ for: 'username' }
-      username
+      username*
     .col-sm-10
-      %input.form-control{ type: 'text', id: 'username', name: 'username', placeholder: 'username' }
+      %input.form-control{ type: 'text', id: 'username', name: 'username', placeholder: 'username', required: true }
 
   .form-group
     %label.col-sm-2.control-label{ for: 'email-address' }
-      email address
+      email address*
     .col-sm-10
-      %input.form-control{ type: 'email', id: 'email-address', name: 'email-address', placeholder: 'email address' }
+      %input.form-control{ type: 'email', id: 'email-address', name: 'email_address', placeholder: 'email address', required: true }
+
+  .form-group
+    %label.col-sm-2.control-label{ for: 'phone-number' }
+      phone number
+    .col-sm-10
+      %input.form-control{ type: 'number', id: 'phone-number', name: 'phone_number', placeholder: 'phone number' }
 
   .form-group
     %label.col-sm-2.control-label{ for: 'first-name' }
-      first name
+      first name*
     .col-sm-10
-      %input.form-control{ type: 'text', id: 'first-name', name: 'first-name', placeholder: 'first name' }
+      %input.form-control{ type: 'text', id: 'first-name', name: 'first_name', placeholder: 'first name', required: true }
 
   .form-group
     %label.col-sm-2.control-label{ for: 'last-name' }
-      last name
+      last name*
     .col-sm-10
-      %input.form-control{ type: 'text', id: 'last-name', name: 'last-name', placeholder: 'last name' }
+      %input.form-control{ type: 'text', id: 'last-name', name: 'last_name', placeholder: 'last name', required: true }
 
   .form-group
     %label.col-sm-2.control-label{ for: 'password' }
-      password
+      password*
     .col-sm-10
-      %input.form-control{ type: 'password', id: 'password', name: 'password', placeholder: 'password' }
+      %input.form-control{ type: 'password', id: 'password', name: 'password', placeholder: 'password', required: true }
 
   .form-group
     .col-sm-offset-2.col-sm-10
