setup validation response for being able to style in the future

--- a/app/views/welcome/signup.html.haml
+++ b/app/views/welcome/signup.html.haml
@@ -1,6 +1,6 @@
 
 %form.form-horizontal#signup-form
-  .validation-response
+  p.validation-response
   .form-group
     %label.col-sm-2.control-label{ for: 'username' }
       username*
