--- a/app/assets/javascripts/money/templates/welcome/signin.jst.ejs.haml
+++ b/app/assets/javascripts/money/templates/welcome/signin.jst.ejs.haml
@@ -1,5 +1,6 @@
 
 %form.form-horizontal#signin-form
+  %p.validation-response
   .form-group
     %label.col-sm-2.control-label{ for: 'username' }
       username
