--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -1,3 +1,72 @@
+<form id="create-bill-form" class="form-horizontal">
+  <p class="validation-response"></p>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label" for="name">
+      name*
+    </label>
+    <div class="col-sm-10">
+      <input class="form-control" type="text" id="name" name="name" placeholder="name" required />
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label" for="next-due-date">
+      next due date*
+    </label>
+    <div class="col-sm-10">
+      <input class="form-control" type="date" id="next-due-date" name="next_due_date" placeholder="next due date" required />
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label" for="amount">
+      amount*
+    </label>
+    <div class="col-sm-10">
+      <input class="form-control" type="number" step="any" id="amount" name="amount" placeholder="amount" required />
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label" for="category">
+      category*
+    </label>
+    <div class="col-sm-10">
+      <select class="form-control" class="categories" id="categories" name="category" required>
+      </select>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label" for="repeat-interval">
+      repeat interval*
+    </label>
+    <div class="col-sm-10">
+      <select class="form-control" class="repeat-intervals" id="repeat-intervals" name="repeat_interval" required>
+      </select>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label" for="tags">
+      tags*
+    </label>
+    <div class="col-sm-10">
+      <input class="form-control" type="text" id="tags" name="tags" placeholder="comma separated tags: eg: tv, netflix, online" />
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button class="btn btn-primary" type="submit">
+        create bill
+      </button>
+    </div>
+  </div>
+</form>
+
+
 <%
   _.each(bills, function(bill) {
 %>
