change phone num to tel. it looks better on mobile

--- a/app/assets/javascripts/money/templates/welcome/signup.jst.ejs
+++ b/app/assets/javascripts/money/templates/welcome/signup.jst.ejs
@@ -24,7 +24,7 @@
       phone number
     </label>
     <div class="col-sm-10">
-      <input class="form-control" type="number" id="phone-number" name="phone_number" placeholder="phone number" />
+      <input class="form-control" type="tel" id="phone-number" name="phone_number" placeholder="phone number" />
     </div>
   </div>
 
