add basic nav. this is a hack. use an event dispatcher to handle page navigation

--- a/app/assets/javascripts/money/templates/users/me.jst.ejs
+++ b/app/assets/javascripts/money/templates/users/me.jst.ejs
@@ -1,3 +1,5 @@
 <h2>
   <%= _.sample(M.greetings) %>, <%= username %>!
 </h2>
+
+<a class="btn btn-default" id="show-bills" href="#" role="button">bills</a>
