--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -1,3 +1,5 @@
+<a class="btn btn-default" href="#" id="profile" role="button">profile</a>
+
 <form id="create-bill-form" class="form-horizontal">
   <p class="validation-response"></p>
 
