--- a/app/assets/javascripts/money/templates/bills/show.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/show.jst.ejs
@@ -1,12 +1,17 @@
-id: <%= id %>
-name: <%= name %>
-next_due_date: <%= next_due_date %>
-amount: <%= amount %>
-category: <%= category.label %>
-repeat_interval: <%= repeat_interval.label %>
-tags: <%= _.pluck(tags, 'name') %>
-payments: <% _.each(payments, function(payment) { %>
-  payment id: <%= payment.id %>
-  payment amount: <%= payment.amount %>
-  payment source: <%= payment.payment_source.name %> (<%= payment.payment_source.type %>)
-<% }); %>
+<a class="btn btn-default" href="#" id="profile" role="button">profile</a>
+<a class="btn btn-default" href="#" id="show-bills" role="button">bills</a>
+
+<div>
+  id: <%= id %>
+  name: <%= name %>
+  next_due_date: <%= next_due_date %>
+  amount: <%= amount %>
+  category: <%= category.label %>
+  repeat_interval: <%= repeat_interval.label %>
+  tags: <%= _.pluck(tags, 'name') %>
+  payments: <% _.each(payments, function(payment) { %>
+    payment id: <%= payment.id %>
+    payment amount: <%= payment.amount %>
+    payment source: <%= payment.payment_source.name %> (<%= payment.payment_source.type %>)
+  <% }); %>
+</div>
