add actual links to the anchors

--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -1,4 +1,4 @@
-<a class="btn btn-default" href="#" id="profile" role="button">profile</a>
+<a class="btn btn-default" href="/profile" id="profile" role="button">profile</a>
 
 <form id="create-bill-form" class="form-horizontal">
   <p class="validation-response"></p>
