--- a/app/assets/javascripts/money/templates/bills/show.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/show.jst.ejs
@@ -1,5 +1,5 @@
-<a class="btn btn-default" href="#" id="profile" role="button">profile</a>
-<a class="btn btn-default" href="#" id="show-bills" role="button">bills</a>
+<a class="btn btn-default" href="/profile" id="profile" role="button">profile</a>
+<a class="btn btn-default" href="/bills" id="show-bills" role="button">bills</a>
 
 <div>
   id: <%= id %>
