--- a/app/assets/javascripts/money/templates/users/me.jst.ejs
+++ b/app/assets/javascripts/money/templates/users/me.jst.ejs
@@ -2,4 +2,4 @@
   <%= _.sample(M.greetings) %>, <%= username %>!
 </h2>
 
-<a class="btn btn-default" id="show-bills" href="#" role="button">bills</a>
+<a class="btn btn-default" id="show-bills" href="/bills" role="button">bills</a>
