--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -31,7 +31,7 @@
   </div>
 
   <div class="form-group">
-    <label class="col-sm-2 control-label" for="category">
+    <label class="col-sm-2 control-label" for="categories">
       category*
     </label>
     <div class="col-sm-10">
@@ -41,7 +41,7 @@
   </div>
 
   <div class="form-group">
-    <label class="col-sm-2 control-label" for="repeat-interval">
+    <label class="col-sm-2 control-label" for="repeat-intervals">
       repeat interval*
     </label>
     <div class="col-sm-10">
