--- a/app/assets/javascripts/money/templates/users/me.jst.ejs
+++ b/app/assets/javascripts/money/templates/users/me.jst.ejs
@@ -3,3 +3,4 @@
 </h2>
 
 <a class="btn btn-default" id="show-bills" href="/bills" role="button">bills</a>
+<a class="btn btn-default" id="signout" href="/" role="button">signout</a>
