--- a/app/assets/javascripts/money/templates/payment_sources/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/payment_sources/index.jst.ejs
@@ -1,1 +1,38 @@
+<a class="btn btn-default" href="/profile" id="profile" role="button">profile</a>
+<a class="btn btn-default" href="/bills" id="show-bills" role="button">bills</a>
 <a class="btn btn-default" id="signout" href="/" role="button">signout</a>
+
+<form id="create-payment-source" class="form-horizontal">
+  <p class="validation-response"></p>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label" for="name">
+      card name*
+    </label>
+    <div class="col-sm-10">
+      <input class="form-control" type="text" id="name" name="name" placeholder="card name" required />
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label" for="type">
+      card type*
+    </label>
+    <div class="col-sm-10">
+      <select class="form-control" class="type" id="type" name="type" required>
+        <option class="credit-card" value="CreditCard">Credit Card</option>
+        <option class="debit-card" value="DebitCard">Debit Card</option>
+      </select>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button class="btn btn-primary" type="submit">
+        create card
+      </button>
+    </div>
+  </div>
+</form>
+
+<ul class="payment-sources"></ul>
