add links to cards and refactor code around bills

--- a/app/assets/javascripts/money/templates/bills/condensed.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/condensed.jst.ejs
@@ -4,4 +4,4 @@ next_due_date: <%= next_due_date %>
 amount: <%= amount %>
 category: <%= category.label %>
 repeat_interval: <%= repeat_interval.label %>
-tags: <%- _.pluck(tags, 'name') %>
+tags: <%- _.pluck(tags, 'name').join(', ') %>
