--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -1,4 +1,5 @@
 <a class="btn btn-default" href="/profile" id="profile" role="button">profile</a>
+<a class="btn btn-default" id="show-payment-sources" href="/cards" role="button">cards</a>
 <a class="btn btn-default" id="signout" href="/" role="button">signout</a>
 
 <form id="create-bill-form" class="form-horizontal">
