--- a/app/assets/javascripts/money/templates/bills/show.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/show.jst.ejs
@@ -1,5 +1,6 @@
 <a class="btn btn-default" href="/profile" id="profile" role="button">profile</a>
 <a class="btn btn-default" href="/bills" id="show-bills" role="button">bills</a>
+<a class="btn btn-default" id="show-payment-sources" href="/cards" role="button">cards</a>
 <a class="btn btn-default" id="signout" href="/" role="button">signout</a>
 
 <div>
