move navigation handlers into the base view making the code more DRY
change the '/me' call to include the member_since attribute

--- a/app/assets/javascripts/money/templates/users/me.jst.ejs
+++ b/app/assets/javascripts/money/templates/users/me.jst.ejs
@@ -3,4 +3,13 @@
 </h2>
 
 <a class="btn btn-default" id="show-bills" href="/bills" role="button">bills</a>
+<a class="btn btn-default" id="show-payment-sources" href="/cards" role="button">cards</a>
 <a class="btn btn-default" id="signout" href="/" role="button">signout</a>
+
+<div>
+  joined on: <%= member_since %>
+</div>
+
+<p>
+  <%= first_name %> <%= last_name %>
+</p>
