--- a/app/assets/javascripts/money/templates/payment_sources/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/payment_sources/index.jst.ejs
@@ -10,7 +10,7 @@
       card name*
     </label>
     <div class="col-sm-10">
-      <input class="form-control" type="text" id="name" name="name" placeholder="card name" required />
+      <input class="form-control" type="text" id="name" name="name" placeholder="card name (assign a nickname)" required />
     </div>
   </div>
 
