add member since :heart:

--- a/app/assets/javascripts/money/templates/users/me.jst.ejs
+++ b/app/assets/javascripts/money/templates/users/me.jst.ejs
@@ -7,7 +7,7 @@
 <a class="btn btn-default" id="signout" href="/" role="button">signout</a>
 
 <div>
-  joined on: <%= member_since %>
+  joined on: <%= memberSince %>
 </div>
 
 <p>
