move the greetings into the utils namespace

--- a/app/assets/javascripts/money/templates/users/me.jst.ejs
+++ b/app/assets/javascripts/money/templates/users/me.jst.ejs
@@ -1,5 +1,5 @@
 <h2>
-  <%= _.sample(M.greetings) %>, <%= username %>!
+  <%= _.sample(M.Utils.greetings) %>, <%= username %>!
 </h2>
 
 <a class="btn btn-default" id="show-bills" href="/bills" role="button">bills</a>
