--- a/app/assets/javascripts/money/templates/welcome/signin.jst.ejs
+++ b/app/assets/javascripts/money/templates/welcome/signin.jst.ejs
@@ -1,29 +1,42 @@
-<form id="signin-form" class="form-horizontal">
-  <p class="validation-response"></p>
 
-  <div class="form-group">
-    <label class="col-sm-2 control-label" for="username">
-      username*
-    </label>
-    <div class="col-sm-10">
-      <input class="form-control" type="text" id="username" name="username" placeholder="username" required />
-    </div>
-  </div>
+<div class="header">
+  <nav>
+    <ul class="nav nav-pills pull-right">
+      <li role="presentation"><a href="/signup">sign up</a></li>
+      <li role="presentation" class="active"><a href="/">sign in</a></li>
+    </ul>
+  </nav>
+  <h2 class="text-muted">money</h2>
+</div>
 
-  <div class="form-group">
-    <label class="col-sm-2 control-label" for="password">
-      password*
-    </label>
-    <div class="col-sm-10">
-      <input class="form-control" type="password" id="password" name="password" placeholder="password" required />
-    </div>
-  </div>
+<div class="container">
+  <form id="signin-form" class="form-horizontal">
+    <div class="validation-response"></div>
 
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button class="btn btn-primary" type="submit">
-        sign in
-      </button>
+    <div class="form-group">
+      <label class="col-sm-2 control-label" for="username">
+        username*
+      </label>
+      <div class="col-sm-10">
+        <input class="form-control" type="text" id="username" name="username" placeholder="username" required />
+      </div>
     </div>
-  </div>
-</form>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label" for="password">
+        password*
+      </label>
+      <div class="col-sm-10">
+        <input class="form-control" type="password" id="password" name="password" placeholder="password" required />
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button class="btn btn-primary" type="submit">
+          sign in
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
