--- a/app/assets/javascripts/money/templates/welcome/signin.jst.ejs
+++ b/app/assets/javascripts/money/templates/welcome/signin.jst.ejs
@@ -2,12 +2,13 @@
 <div class="header">
   <nav>
     <ul class="nav nav-pills pull-right">
-      <li role="presentation"><a href="/signup">sign up</a></li>
-      <li role="presentation" class="active"><a href="/">sign in</a></li>
+      <li id="show-signup" role="presentation"><a href="/signup">sign up</a></li>
+      <li id="show-signin" role="presentation" class="active"><a href="/">sign in</a></li>
     </ul>
   </nav>
   <h2 class="text-muted">money</h2>
 </div>
+
 
 <div class="container">
   <form id="signin-form" class="form-horizontal">
