add sprockets for path helpers in both bootstrap and font awesome

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
 @import 'bootstrap',
+  'bootstrap-sprockets',
   'signup',
   'signin',
   'profile',
   'bills',
   'cards',
-  'payments'
+  'payments',
+  'font-awesome-sprockets',
+  'font-awesome';
