--- a/app/assets/javascripts/money/templates/welcome/signin.jst.ejs
+++ b/app/assets/javascripts/money/templates/welcome/signin.jst.ejs
@@ -2,8 +2,8 @@
 <div class="header">
   <nav>
     <ul class="nav nav-pills pull-right">
-      <li id="show-signup" role="presentation"><a href="/signup">sign up</a></li>
-      <li id="show-signin" role="presentation" class="active"><a href="/">sign in</a></li>
+      <li role="presentation"><a href="/signup" class="show-signup">sign up</a></li>
+      <li role="presentation" class="active"><a href="/" class="show-signin">sign in</a></li>
     </ul>
   </nav>
   <h2 class="text-muted">money</h2>
