print each piece of info its own line

--- a/app/assets/javascripts/money/templates/users/profile.jst.ejs
+++ b/app/assets/javascripts/money/templates/users/profile.jst.ejs
@@ -55,13 +55,12 @@
 
 <div>
   <i class="fa fa-user fa-5x"></i>
-  joined on: <%= memberSince %>
 </div>
 
-<p>
-  <%= first_name %> <%= last_name %>
-</p>
-
-<p>
-  <%= email_address %>
-</p>
+<div>
+  <ul>
+    <li><%= first_name %> <%= last_name %></li>
+    <li><%= email_address %></li>
+    <li>joined on: <%= memberSince %></li>
+  </ul>
+</div>
