add styling to cards page

--- a/app/assets/javascripts/money/templates/payment_sources/show.jst.ejs
+++ b/app/assets/javascripts/money/templates/payment_sources/show.jst.ejs
@@ -1,1 +1,7 @@
-<%= type %>: <%= name %>
+
+<i class="fa fa-credit-card"></i>
+<%= name %>
+
+<span class="label label-primary">
+  <%= type.replace('Card', '') %>
+</span>
