add styling to the payments page

--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -50,7 +50,7 @@
 </nav>
 
 <form id="create-bill-form" class="form-horizontal">
-  <p class="validation-response"></p>
+  <div class="validation-response"></div>
 
   <div class="form-group">
     <label class="col-sm-2 control-label" for="name">
