--- a/app/assets/javascripts/money/templates/payments/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/payments/index.jst.ejs
@@ -1,7 +1,6 @@
 
-
 <form id="create-payment" class="form-horizontal">
-  <p class="validation-response"></p>
+  <div class="validation-response"></div>
 
   <div class="form-group">
     <label class="col-sm-2 control-label" for="amount">
@@ -30,4 +29,4 @@
   </div>
 </form>
 
-<ul class="payments"></ul>
+<ul class="payments list-group"></ul>
