add due date text on the condensed bill

--- a/app/assets/javascripts/money/templates/bills/condensed.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/condensed.jst.ejs
@@ -9,7 +9,7 @@
 
 <div class="list-group-item-text">
   <span>
-    <%= moment(next_due_date).format("dddd, MMMM Do YYYY") %>
+    Due on: <%= moment(next_due_date).format("dddd, MMMM Do YYYY") %>
   </span>
 
   <span class="gray">
