constantize the array name

--- a/app/assets/javascripts/money/templates/users/profile.jst.ejs
+++ b/app/assets/javascripts/money/templates/users/profile.jst.ejs
@@ -50,7 +50,7 @@
 </nav>
 
 <h2>
-  <%= _.sample(M.Utils.greetings) %>, <%= username %>!
+  <%= _.sample(M.Utils.Greetings) %>, <%= username %>!
 </h2>
 
 <div>
