--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -66,7 +66,7 @@
       next due date*
     </label>
     <div class="col-sm-10">
-      <input class="form-control" type="date" id="next-due-date" name="next_due_date" placeholder="next due date" required />
+      <input class="form-control" type="date" id="next-due-date" name="next_due_date" placeholder="next due date" value="<%- moment().format('YYYY-MM-DD') %>" required />
     </div>
   </div>
 
