turn off autocomplete for signin and signup formm. closes #44

--- a/app/assets/javascripts/money/templates/welcome/signin.jst.ejs
+++ b/app/assets/javascripts/money/templates/welcome/signin.jst.ejs
@@ -11,7 +11,7 @@
 
 
 <div class="container">
-  <form id="signin-form" class="form-horizontal">
+  <form id="signin-form" class="form-horizontal" autocomplete="off">
     <div class="validation-response"></div>
 
     <div class="form-group">
