--- a/app/assets/javascripts/money/templates/welcome/signup.jst.ejs
+++ b/app/assets/javascripts/money/templates/welcome/signup.jst.ejs
@@ -10,7 +10,7 @@
 </div>
 
 <div class="container">
-  <form id="signup-form" class="form-horizontal">
+  <form id="signup-form" class="form-horizontal" autocomplete="off">
     <div class="validation-response"></div>
 
     <div class="form-group">
