turn off autocorrection and autocapitalization on username input fields. closes #45

--- a/app/assets/javascripts/money/templates/welcome/signup.jst.ejs
+++ b/app/assets/javascripts/money/templates/welcome/signup.jst.ejs
@@ -18,7 +18,7 @@
         username*
       </label>
       <div class="col-sm-10">
-        <input class="form-control" type="text" id="username" name="username" placeholder="username" required />
+        <input class="form-control" type="text" id="username" name="username" placeholder="username" autocorrect="off" autocapitalize="off" required />
       </div>
     </div>
 
