--- a/app/assets/javascripts/money/templates/welcome/signin.jst.ejs
+++ b/app/assets/javascripts/money/templates/welcome/signin.jst.ejs
@@ -19,7 +19,7 @@
         username*
       </label>
       <div class="col-sm-10">
-        <input class="form-control" type="text" id="username" name="username" placeholder="username" required />
+        <input class="form-control" type="text" id="username" name="username" placeholder="username" autocorrect="off" autocapitalize="off" required />
       </div>
     </div>
 
