hide create bill form by default and only show it when needed. closes #41

--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -49,6 +49,8 @@
   </div>
 </nav>
 
+<a id="toggle-create-bill-form" class="btn btn-default" href="#" role="button">create bill</a>
+
 <form id="create-bill-form" class="form-horizontal">
   <div class="validation-response"></div>
 
