do not show the create payment form by default. closes #42

--- a/app/assets/javascripts/money/templates/payments/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/payments/index.jst.ejs
@@ -1,4 +1,6 @@
 
+<a id="toggle-create-payment-form" class="btn btn-default" href="#" role="button">create payment</a>
+
 <form id="create-payment" class="form-horizontal">
   <div class="validation-response"></div>
 
