removed the * from the tags input field in the bills form as it is not a mandatory field.

--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -101,7 +101,7 @@
 
   <div class="form-group">
     <label class="col-sm-2 control-label" for="tags">
-      tags*
+      tags
     </label>
     <div class="col-sm-10">
       <input class="form-control" type="text" id="tags" name="tags" placeholder="comma separated tags: eg: tv, netflix, online" />
