--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -93,6 +93,15 @@
     </div>
   </div>
 
+  <div class="form-group select-card-form-group">
+    <label class="col-sm-2 control-label" for="payment-source-id">
+      select card*
+    </label>
+    <div class="col-sm-10">
+      <select class="form-control" class="payment-source-id" id="payment-source-id" name="payment_source_id" required></select>
+    </div>
+  </div>
+
   <div class="form-group">
     <label class="col-sm-2 control-label" for="tags">
       tags
