--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -56,15 +56,6 @@
   </div>
 
   <div class="form-group">
-    <label class="col-sm-2 control-label" for="next-due-date">
-      next due date*
-    </label>
-    <div class="col-sm-10">
-      <input class="form-control" type="date" id="next-due-date" name="next_due_date" placeholder="next due date" value="<%- moment().format('YYYY-MM-DD') %>" required />
-    </div>
-  </div>
-
-  <div class="form-group">
     <label class="col-sm-2 control-label" for="amount">
       amount*
     </label>
@@ -74,12 +65,11 @@
   </div>
 
   <div class="form-group">
-    <label class="col-sm-2 control-label" for="categories">
-      category*
+    <label class="col-sm-2 control-label" for="next-due-date">
+      next due date*
     </label>
     <div class="col-sm-10">
-      <select class="form-control" class="categories" id="categories" name="category" required>
-      </select>
+      <input class="form-control" type="date" id="next-due-date" name="next_due_date" placeholder="next due date" value="<%- moment().format('YYYY-MM-DD') %>" required />
     </div>
   </div>
 
@@ -103,11 +93,21 @@
   </div>
 
   <div class="form-group">
+    <label class="col-sm-2 control-label" for="categories">
+      category*
+    </label>
+    <div class="col-sm-10">
+      <select class="form-control" class="categories" id="categories" name="category" required>
+      </select>
+    </div>
+  </div>
+
+  <div class="form-group">
     <label class="col-sm-2 control-label" for="tags">
       tags
     </label>
     <div class="col-sm-10">
-      <input class="form-control" type="text" id="tags" name="tags" placeholder="comma separated tags: eg: tv, netflix, online" />
+      <input class="form-control" type="text" id="tags" name="tags" placeholder="optional comma separated tags: eg: tv, netflix, online" />
     </div>
   </div>
 
