add format hint

--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -66,7 +66,7 @@
 
   <div class="form-group">
     <label class="col-sm-2 control-label" for="next-due-date">
-      next due date*
+      next due date* (mm/dd/yyyy)
     </label>
     <div class="col-sm-10">
       <input class="form-control" type="date" id="next-due-date" name="next_due_date" placeholder="next due date" value="<%- moment().format('YYYY-MM-DD') %>" required />
