--- a/app/assets/javascripts/money/templates/repeat_intervals/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/repeat_intervals/index.jst.ejs
@@ -1,7 +1,7 @@
 <%
   _.each(repeatIntervals, function(repeatInterval) {
 %>
-<option class='repeat-interval' value='<%= repeatInterval.id %>' data-interval='<%= repeatInterval.interval %>'>
+<option class='repeat-interval' value='<%= repeatInterval.id %>' data-interval='<%= repeatInterval.interval %>' <%= (selectedId == repeatInterval.id) ? 'selected' : '' %>>
 <%= repeatInterval.label %>
 </option>
 <%
