--- a/app/assets/javascripts/money/templates/bills/show.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/show.jst.ejs
@@ -42,38 +42,39 @@
 </nav>
 
 <div id="bill-details">
-<div class="panel panel-primary">
-  <div class="panel-heading">
-    <h3 class="panel-title"><%= name %></h3>
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+    <span class="edit-bill close"><i class="fa fa-pencil-square-o"></i></span>
+      <h3 class="panel-title"><%= name %></h3>
+    </div>
+    <div class="panel-body">
+      <span class="badge">
+        $<%= amount %>
+      </span>
+
+      <span class="label label-primary">
+        <%= category.label %>
+      </span>
+
+      <p>
+        <span class="gray">Due on:</span>
+        <strong>
+          <%= moment(next_due_date).format("dddd, MMMM Do YYYY") %>
+        </strong>
+      </p>
+
+      <p>
+        <span class="gray">Repeats:</span> <strong><%= repeat_interval.label %></strong>
+      </p>
+
+      <p>
+        <%= _.map(tags, function(tag) {
+          return '<mark><i class="fa fa-tag"></i> ' + tag.name + '</mark>';
+        }).join(' ') %>
+      </p>
+    </div>
   </div>
-  <div class="panel-body">
-    <span class="badge">
-      $<%= amount %>
-    </span>
-
-    <span class="label label-primary">
-      <%= category.label %>
-    </span>
-
-    <p>
-      <span class="gray">Due on:</span>
-      <strong>
-        <%= moment(next_due_date).format("dddd, MMMM Do YYYY") %>
-      </strong>
-    </p>
-
-    <p>
-      <span class="gray">Repeats:</span> <strong><%= repeat_interval.label %></strong>
-    </p>
-
-    <p>
-      <%= _.map(tags, function(tag) {
-        return '<mark><i class="fa fa-tag"></i> ' + tag.name + '</mark>';
-      }).join(' ') %>
-    </p>
-  </div>
-</div>
 </div>
 
-<div id="manage-payments">
-</div>
+<div id="edit-bill-section"></div>
+<div id="manage-payments"></div>
