--- a/app/assets/javascripts/money/templates/categories/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/categories/index.jst.ejs
@@ -1,7 +1,7 @@
 <%
   _.each(categories, function(category) {
 %>
-<option class='category' value='<%= category.id %>' data-category-name='<%= category.name %>'>
+<option class='category' value='<%= category.id %>' data-category-name='<%= category.name %>' <%= (selectedId == category.id) ? 'selected' : '' %>>
 <%= category.label %>
 </option>
 <%
