edit payment sources

--- a/app/assets/javascripts/money/templates/payment_sources/show.jst.ejs
+++ b/app/assets/javascripts/money/templates/payment_sources/show.jst.ejs
@@ -1,4 +1,6 @@
 
+<span class="edit-payment-source close"><i class="fa fa-pencil-square-o"></i></span>
+
 <i class="fa fa-credit-card"></i>
 <%= name %>
 
