--- a/app/assets/javascripts/money/templates/bills/show.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/show.jst.ejs
@@ -49,7 +49,7 @@
     </div>
     <div class="panel-body">
       <span class="badge">
-        $<%= amount %>
+        $<%= parseFloat(amount).toFixed(2) %>
       </span>
 
       <span class="label label-primary">
