handle missing payment source while creating bills. fixes #61
when the user doesn't have any cards on file and tries to add a
bill, the browser complains about unfocussable input field due to
the "required" attribute on the payment_source_id input field.
this adds validations and fixes the issue.

--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -88,7 +88,7 @@
       select card*
     </label>
     <div class="col-sm-10">
-      <select class="form-control" class="payment-source-id" id="payment-source-id" name="payment_source_id" required></select>
+      <select class="form-control" class="payment-source-id" id="payment-source-id" name="payment_source_id"></select>
     </div>
   </div>
 
