update styling and reduce info on the bills page

--- a/app/assets/javascripts/money/templates/payments/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/payments/index.jst.ejs
@@ -1,5 +1,5 @@
 
-<a id="toggle-create-payment-form" class="btn btn-default" href="#" role="button">create payment</a>
+<a id="toggle-create-payment-form" class="btn btn-link" href="#" role="button">+ create payment</a>
 
 <form id="create-payment" class="form-horizontal">
   <div class="validation-response"></div>
