--- a/app/assets/javascripts/money/templates/bills/condensed.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/condensed.jst.ejs
@@ -2,16 +2,9 @@
   $<%= parseFloat(amount).toFixed(2) %>
 </span>
 
-<h4 class="list-group-item-heading">
-  <i class="fa fa-<%- M.IconMap[category.name] %>"></i>
-  <%= name %>
-</h4>
-
 <div class="list-group-item-text">
+  <i class="fa fa-<%- M.IconMap[category.name] %>"></i>
+  <span><strong><%= name %></strong></span>
   <span class="gray">Due on:</span>
-  <strong>
-    <%= moment(next_due_date).format("dddd, MMMM Do YYYY") %>
-  </strong>
-
-  <span class="gray">(repeats:</span> <strong><%= repeat_interval.label %></strong><span class="gray">)</span>
+    <%= moment(next_due_date).format("MMMM Do YYYY") %>
 </div>
