--- a/app/assets/javascripts/money/templates/bills/index.jst.ejs
+++ b/app/assets/javascripts/money/templates/bills/index.jst.ejs
@@ -41,7 +41,7 @@
   </div>
 </nav>
 
-<a id="toggle-create-bill-form" class="btn btn-default" href="#" role="button">create bill</a>
+<a id="toggle-create-bill-form" class="btn btn-link" href="#" role="button">+ create bill</a>
 
 <form id="create-bill-form" class="form-horizontal">
   <div class="validation-response"></div>
