add gravatar profile pics

--- a/app/assets/javascripts/money/templates/users/profile.jst.ejs
+++ b/app/assets/javascripts/money/templates/users/profile.jst.ejs
@@ -46,7 +46,7 @@
 </h2>
 
 <div>
-  <i class="fa fa-user fa-5x"></i>
+  <img src="http://www.gravatar.com/avatar/<%= md5(email_address) %>?s=200" alt="profile picture" />
 </div>
 
 <div>
