profile pics support (gravatar)

--- a/app/assets/javascripts/money/templates/users/profile.jst.ejs
+++ b/app/assets/javascripts/money/templates/users/profile.jst.ejs
@@ -46,13 +46,10 @@
 </h2>
 
 <div>
-  <img src="http://www.gravatar.com/avatar/<%= md5(email_address) %>?s=200" alt="profile picture" />
-</div>
-
-<div>
-  <ul>
-    <li><%= first_name %> <%= last_name %></li>
-    <li><%= email_address %></li>
-    <li>joined on: <%= memberSince %></li>
+  <ul class="user-details">
+    <li><img src="http://www.gravatar.com/avatar/<%= md5(email_address) %>?s=200" alt="profile picture" /></li>
+    <li><i class="fa fa-user"></i> <%= first_name %> <%= last_name %></li>
+    <li><i class="fa fa-envelope-o"></i> <%= email_address %></li>
+    <li><i class="fa fa-clock-o"></i> joined on <%= memberSince %></li>
   </ul>
 </div>
